force-app/main/default/objects/Solar_Quote__c/Solar_Quote__c.object-meta.xml
<CustomObject>
    <label>Solar Quote</label>
    <nameField>
        <displayFormat>SQ-{0000000}</displayFormat>
        <label>Solar Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solar Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>