force-app/main/default/objects/Solar_Quote__c/fields/Additional_Cost_Cash__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Cash__c</fullName>
    <label>Additional Cost (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>