force-app/main/default/objects/Solar_Quote__c/fields/Annual_Bill__c.field-meta.xml
<CustomField>
    <fullName>Annual_Bill__c</fullName>
    <label>Annual Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>