force-app/main/default/objects/Solar_Quote__c/fields/Average_Pitch_Degrees__c.field-meta.xml
<CustomField>
    <fullName>Average_Pitch_Degrees__c</fullName>
    <label>Average Pitch Degrees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>