force-app/main/default/objects/Solar_Quote__c/fields/Batteries_Cost_Loan__c.field-meta.xml
<CustomField>
    <fullName>Batteries_Cost_Loan__c</fullName>
    <label>Batteries Cost (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>