force-app/main/default/objects/Solar_Quote__c/fields/Batteries_Count_Cash__c.field-meta.xml
<CustomField>
    <fullName>Batteries_Count_Cash__c</fullName>
    <label>Batteries Count (Cash)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>