force-app/main/default/objects/Solar_Quote__c/fields/Batteries_Count_TPO__c.field-meta.xml
<CustomField>
    <fullName>Batteries_Count_TPO__c</fullName>
    <label>Batteries Count (TPO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>