force-app/main/default/objects/Solar_Quote__c/fields/City_Tier__c.field-meta.xml
<CustomField>
    <fullName>City_Tier__c</fullName>
    <label>City Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>