force-app/main/default/objects/Solar_Quote__c/fields/Completed_General_Process__c.field-meta.xml
<CustomField>
    <fullName>Completed_General_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed General Process?</label>
    <type>Checkbox</type>
</CustomField>