force-app/main/default/objects/Solar_Quote__c/fields/Completed_Solar_Profiles_Process_Loan__c.field-meta.xml
<CustomField>
    <fullName>Completed_Solar_Profiles_Process_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Solar Profiles Process (Loan)?</label>
    <type>Checkbox</type>
</CustomField>