force-app/main/default/objects/Solar_Quote__c/fields/Completed_Solar_Profiles_Process_TPO__c.field-meta.xml
<CustomField>
    <fullName>Completed_Solar_Profiles_Process_TPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Solar Profiles Process (TPO)?</label>
    <type>Checkbox</type>
</CustomField>