force-app/main/default/objects/Solar_Quote__c/fields/Depreciation_Loan__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Loan__c</fullName>
    <label>Depreciation (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>