force-app/main/default/objects/Solar_Quote__c/fields/Failed_Solar_Quote_Process__c.field-meta.xml
<CustomField>
    <fullName>Failed_Solar_Quote_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Solar Quote Process?</label>
    <type>Checkbox</type>
</CustomField>