force-app/main/default/objects/Solar_Quote__c/fields/Federal_ITC_Cash__c.field-meta.xml
<CustomField>
    <fullName>Federal_ITC_Cash__c</fullName>
    <label>Federal ITC (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>