force-app/main/default/objects/Solar_Quote__c/fields/Final_Price_TPO__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_TPO__c</fullName>
    <label>Final Price (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>