force-app/main/default/objects/Solar_Quote__c/fields/Finance_Type_Available_TPO__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type_Available_TPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Type Available? (TPO)</label>
    <type>Checkbox</type>
</CustomField>