force-app/main/default/objects/Solar_Quote__c/fields/Genability_Provider_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Genability_Provider_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genability Provider Account Id</label>
    <referenceTo>Genability_Provider_Account_Id__c</referenceTo>
    <relationshipLabel>Solar Quotes</relationshipLabel>
    <relationshipName>Solar_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>