force-app/main/default/objects/Solar_Quote__c/fields/Ground_Mount__c.field-meta.xml
<CustomField>
    <fullName>Ground_Mount__c</fullName>
    <label>Ground Mount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Ground Mount</fullName>
            </value>
            <value>
                <fullName>Shade Structure Ground Mount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>