force-app/main/default/objects/Solar_Quote__c/fields/Incentives_Loan__c.field-meta.xml
<CustomField>
    <fullName>Incentives_Loan__c</fullName>
    <label>Incentives (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>