force-app/main/default/objects/Solar_Quote__c/fields/Manual_Initiate_Solar_Quote_Process__c.field-meta.xml
<CustomField>
    <fullName>Manual_Initiate_Solar_Quote_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Initiate Solar Quote Process?</label>
    <type>Checkbox</type>
</CustomField>