force-app/main/default/objects/Solar_Quote__c/fields/Max_Panels_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Panels_Count__c</fullName>
    <label>Max Panels Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>