force-app/main/default/objects/Solar_Quote__c/fields/New_Lifetime_Solar_Cost_TPO__c.field-meta.xml
<CustomField>
    <fullName>New_Lifetime_Solar_Cost_TPO__c</fullName>
    <label>New Lifetime Solar Cost (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>