force-app/main/default/objects/Solar_Quote__c/fields/Old_Lifetime_Utility_Cost_TPO__c.field-meta.xml
<CustomField>
    <fullName>Old_Lifetime_Utility_Cost_TPO__c</fullName>
    <label>Old Lifetime Utility Cost (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>