force-app/main/default/objects/Solar_Quote__c/fields/Panels_Count__c.field-meta.xml
<CustomField>
    <fullName>Panels_Count__c</fullName>
    <label>Panels Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>