force-app/main/default/objects/Solar_Quote__c/fields/Preferred_Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Finance_Type__c</fullName>
    <label>Preferred Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPO</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>