force-app/main/default/objects/Solar_Quote__c/fields/Price_Per_kWh_TPO__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_kWh_TPO__c</fullName>
    <label>Price Per kWh (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>