force-app/main/default/objects/Solar_Quote__c/fields/Provider_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account_Id__c</fullName>
    <formula>Genability_Provider_Account_Id__r.Provider_Account_Id__c</formula>
    <label>Provider Account Id</label>
    <type>Text</type>
</CustomField>