force-app/main/default/objects/Solar_Quote__c/fields/Run_Typical_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Run_Typical_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Typical Analysis?</label>
    <type>Checkbox</type>
</CustomField>