force-app/main/default/objects/Solar_Quote__c/fields/Safe_Streets__c.field-meta.xml
<CustomField>
    <fullName>Safe_Streets__c</fullName>
    <label>Safe Streets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basics Package</fullName>
            </value>
            <value>
                <fullName>Essentials Package</fullName>
            </value>
            <value>
                <fullName>Premium Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>