force-app/main/default/objects/Solar_Quote__c/fields/Solar_Offset_Cash__c.field-meta.xml
<CustomField>
    <fullName>Solar_Offset_Cash__c</fullName>
    <label>Solar Offset (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>