force-app/main/default/objects/Solar_Quote__c/fields/Solar_Offset_Loan__c.field-meta.xml
<CustomField>
    <fullName>Solar_Offset_Loan__c</fullName>
    <label>Solar Offset (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>