force-app/main/default/objects/Solar_Quote__c/fields/Solar_Production_TPO__c.field-meta.xml
<CustomField>
    <fullName>Solar_Production_TPO__c</fullName>
    <label>Solar Production (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>