force-app/main/default/objects/Solar_Quote__c/fields/Solar_Provider_Profile_Ids_Cash__c.field-meta.xml
<CustomField>
    <fullName>Solar_Provider_Profile_Ids_Cash__c</fullName>
    <label>Solar Provider Profile Ids (Cash)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>