force-app/main/default/objects/Solar_Quote__c/fields/Storage_Profile_Id_Cash__c.field-meta.xml
<CustomField>
    <fullName>Storage_Profile_Id_Cash__c</fullName>
    <label>Storage Profile Id (Cash)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>