force-app/main/default/objects/Solar_Quote__c/fields/System_Size_kW_Loan__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_Loan__c</fullName>
    <label>System Size (kW) (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>