force-app/main/default/objects/Solar_Quote__c/fields/Total_Baseline_Measures_TPO__c.field-meta.xml
<CustomField>
    <fullName>Total_Baseline_Measures_TPO__c</fullName>
    <label>Total Baseline Measures (TPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>