force-app/main/default/objects/Solar_Quote__c/fields/Total_System_Cost_Cash__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Cost_Cash__c</fullName>
    <label>Total System Cost (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>