force-app/main/default/objects/Solar_Quote__c/fields/Total_System_Cost_TPO__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Cost_TPO__c</fullName>
    <label>Total System Cost TPO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>