force-app/main/default/objects/Solar_Quote__c/fields/Yearly_Savings_Cash__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Savings_Cash__c</fullName>
    <label>Yearly Savings (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>